// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuthorDetails /> renders correctly with name, date, department props and matches snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
        },
        [
          {
            "borderRadius": 20,
            "borderWidth": 2,
            "height": 40,
            "marginRight": 10,
            "overflow": "hidden",
            "width": 40,
          },
          {
            "borderColor": "#eee",
          },
        ],
      ]
    }
  >
    <ViewManagerAdapter_ExpoImage
      backgroundColor={4290559425}
      containerViewRef={"[React.ref]"}
      contentFit="cover"
      contentPosition={
        {
          "left": "50%",
          "top": "50%",
        }
      }
      height="100%"
      nativeViewRef={"[React.ref]"}
      onError={[Function]}
      onLoad={[Function]}
      onLoadStart={[Function]}
      onProgress={[Function]}
      placeholder={
        [
          {
            "testUri": "../../../assets/images/photo-placeholder.png",
          },
        ]
      }
      source={
        [
          {
            "uri": "https://ui-avatars.com/api/?name=Test Name",
          },
        ]
      }
      style={
        {
          "backgroundColor": "#bcbdc1",
          "height": "100%",
          "width": "100%",
        }
      }
      transition={null}
      width="100%"
    />
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#000",
            "fontFamily": "Inter_400Regular",
          },
          [
            {
              "fontSize": 15,
            },
            {
              "fontWeight": "bold",
            },
          ],
        ]
      }
    >
      Test Name
    </Text>
    <View
      style={
        [
          {
            "backgroundColor": "#fff",
          },
          {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#000",
              "fontFamily": "Inter_400Regular",
            },
            [
              {
                "fontSize": 13,
              },
              {
                "color": "#888",
                "marginRight": 3,
              },
            ],
          ]
        }
      >
        há 7 dias
      </Text>
      <Text
        style={
          [
            {
              "color": "#000",
              "fontFamily": "Inter_400Regular",
            },
            [
              {
                "fontSize": 13,
              },
              {
                "color": "#888",
                "fontSize": 9,
              },
            ],
          ]
        }
      >
         • 
      </Text>
      <Text
        style={
          [
            {
              "color": "#000",
              "fontFamily": "Inter_400Regular",
            },
            [
              {
                "fontSize": 13,
              },
              {
                "color": "#888",
                "marginLeft": 3,
              },
            ],
          ]
        }
      >
        Em 
        Test Name
      </Text>
    </View>
  </View>
</View>
`;

exports[`<AuthorDetails /> renders correctly with photo prop and matches snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
        },
        [
          {
            "borderRadius": 20,
            "borderWidth": 2,
            "height": 40,
            "marginRight": 10,
            "overflow": "hidden",
            "width": 40,
          },
          {
            "borderColor": "#eee",
          },
        ],
      ]
    }
  >
    <ViewManagerAdapter_ExpoImage
      backgroundColor={4290559425}
      containerViewRef={"[React.ref]"}
      contentFit="cover"
      contentPosition={
        {
          "left": "50%",
          "top": "50%",
        }
      }
      height="100%"
      nativeViewRef={"[React.ref]"}
      onError={[Function]}
      onLoad={[Function]}
      onLoadStart={[Function]}
      onProgress={[Function]}
      placeholder={
        [
          {
            "testUri": "../../../assets/images/photo-placeholder.png",
          },
        ]
      }
      source={
        [
          {
            "uri": "https://example.com/test-image.png",
          },
        ]
      }
      style={
        {
          "backgroundColor": "#bcbdc1",
          "height": "100%",
          "width": "100%",
        }
      }
      testID="author-image"
      transition={null}
      width="100%"
    />
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#000",
            "fontFamily": "Inter_400Regular",
          },
          [
            {
              "fontSize": 15,
            },
            {
              "fontWeight": "bold",
            },
          ],
        ]
      }
    >
      test
    </Text>
    <View
      style={
        [
          {
            "backgroundColor": "#fff",
          },
          {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#000",
              "fontFamily": "Inter_400Regular",
            },
            [
              {
                "fontSize": 13,
              },
              {
                "color": "#888",
                "marginRight": 3,
              },
            ],
          ]
        }
      >
        test
      </Text>
      <Text
        style={
          [
            {
              "color": "#000",
              "fontFamily": "Inter_400Regular",
            },
            [
              {
                "fontSize": 13,
              },
              {
                "color": "#888",
                "fontSize": 9,
              },
            ],
          ]
        }
      >
         • 
      </Text>
      <Text
        style={
          [
            {
              "color": "#000",
              "fontFamily": "Inter_400Regular",
            },
            [
              {
                "fontSize": 13,
              },
              {
                "color": "#888",
                "marginLeft": 3,
              },
            ],
          ]
        }
      >
        Em 
        test
      </Text>
    </View>
  </View>
</View>
`;

exports[`<AuthorDetails /> renders correctly with placeholder photo and matches snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
        },
        [
          {
            "borderRadius": 20,
            "borderWidth": 2,
            "height": 40,
            "marginRight": 10,
            "overflow": "hidden",
            "width": 40,
          },
          {
            "borderColor": "#eee",
          },
        ],
      ]
    }
  >
    <ViewManagerAdapter_ExpoImage
      backgroundColor={4290559425}
      containerViewRef={"[React.ref]"}
      contentFit="cover"
      contentPosition={
        {
          "left": "50%",
          "top": "50%",
        }
      }
      height="100%"
      nativeViewRef={"[React.ref]"}
      onError={[Function]}
      onLoad={[Function]}
      onLoadStart={[Function]}
      onProgress={[Function]}
      placeholder={
        [
          {
            "testUri": "../../../assets/images/photo-placeholder.png",
          },
        ]
      }
      source={
        [
          {
            "uri": "https://ui-avatars.com/api/?name=name",
          },
        ]
      }
      style={
        {
          "backgroundColor": "#bcbdc1",
          "height": "100%",
          "width": "100%",
        }
      }
      testID="default-author-image"
      transition={null}
      width="100%"
    />
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#000",
            "fontFamily": "Inter_400Regular",
          },
          [
            {
              "fontSize": 15,
            },
            {
              "fontWeight": "bold",
            },
          ],
        ]
      }
    >
      name
    </Text>
    <View
      style={
        [
          {
            "backgroundColor": "#fff",
          },
          {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#000",
              "fontFamily": "Inter_400Regular",
            },
            [
              {
                "fontSize": 13,
              },
              {
                "color": "#888",
                "marginRight": 3,
              },
            ],
          ]
        }
      >
        test
      </Text>
      <Text
        style={
          [
            {
              "color": "#000",
              "fontFamily": "Inter_400Regular",
            },
            [
              {
                "fontSize": 13,
              },
              {
                "color": "#888",
                "fontSize": 9,
              },
            ],
          ]
        }
      >
         • 
      </Text>
      <Text
        style={
          [
            {
              "color": "#000",
              "fontFamily": "Inter_400Regular",
            },
            [
              {
                "fontSize": 13,
              },
              {
                "color": "#888",
                "marginLeft": 3,
              },
            ],
          ]
        }
      >
        Em 
        name
      </Text>
    </View>
  </View>
</View>
`;
